tests/negative/neg_public_task.safe
-- Test: neg_public_task
-- Description: Public task declarations are illegal.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.1.p6:be85291b
-- Expected: REJECT source_frontend_error

package Public_Task_Test is

   public task Worker is
   begin
      loop
         null;
      end loop;
   end Worker;

end Public_Task_Test;
